OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/Follow_Up_Queue__c.object-meta.xml
<CustomObject>
    <description
  >Tracks pending and failed onboarding follow-up communications (SMS/Email/In-App) with status tracking, retry attempts, next attempt scheduling, and error details. Records are created by Follow_Up_Rule__mdt metadata when trigger conditions are met. Example: When an onboarding requirement remains &quot;Incomplete&quot; for 7 days, a Follow_Up_Queue record is created with Follow_Up_Type__c=&quot;Email&quot; and Status__c=&quot;Pending&quot;. The system attempts to send on Next_Attempt_Date__c, and if it fails, increments Attempt_Count__c and reschedules based on escalation rules. Failed attempts can be manually retried by admins via the messagingIssuesTab component.</description>
    <label>Follow Up Queue</label>
    <nameField>
        <label>Follow Up Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Up Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>