OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <description>Total number of send attempts made for this follow-up.</description>
    <label>Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>