OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Days_Since_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Trigger__c</fullName>
    <description>Calculated days since this follow-up was created/triggered.</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Trigger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>