OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Latest error encountered when sending follow-up.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>