OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Fatigue_Suppressed__c.field-meta.xml
<CustomField>
    <fullName>Fatigue_Suppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the follow-up is paused due to fatigue or suppression window.</description>
    <label>Fatigue Suppressed</label>
    <type>Checkbox</type>
</CustomField>