OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft delete flag to hide retired follow-ups from active processing.</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>