OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Last_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Date__c</fullName>
    <description>Date/time when the most recent send attempt occurred.</description>
    <label>Last Attempt Date</label>
    <type>DateTime</type>
</CustomField>