OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Next_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_Date__c</fullName>
    <description>Scheduled date/time for the next send attempt (initial delay or escalation step).</description>
    <label>Next Attempt Date</label>
    <type>DateTime</type>
</CustomField>