OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Follow Up Queues</relationshipLabel>
    <relationshipName>Follow_Up_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>