OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Date/time when the follow-up was completed, dismissed, or resolved.</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>