OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Suppression_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Reason__c</fullName>
    <description>Explanation for why this follow-up is suppressed (fatigue, holiday, manual pause).</description>
    <label>Suppression Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>