OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Dealer timezone used for scheduling sends and suppression windows.</description>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>