OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Queue__c/fields/Trigger_Reason__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Reason__c</fullName>
    <description>Why this follow-up was created (e.g., status change, inactivity trigger).</description>
    <label>Trigger Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>